# goalgo

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
admin_service/: app.py  entity.py  model.py  setting.py
admin_service/controller/: __init__.py  config.py  incoming.py  order.py  strategy.py
admin_service/dto/: config.py  incoming.py  order.py  strategy.py
admin_service/pkg/: executor.py  provider.py
admin_service/pkg/connector/: brocker.py
admin_service/repo/: config.py  incoming.py  order.py  strategy.py
research/: intro.ipynb  moex_utils.py  test_moex_utils.py
trading_service/: __main__.py  config.py  logger.py  strategy.py  utils.py
trading_service/connector/: brocker.py  data.py
trading_service/pkg/: observer.py
