[tool.poetry]
name = "admin_service"
version = "0.1.0"
description = "Mono repository of the strategy launch service, monitoring service"
authors = ["piepie team"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
moexalgo = "^1.0.1"
pandas = "^2.1.3"
annotated-types = "^0.6.0"
sqlalchemy = "^2.0.23"
uvicorn = "^0.24.0.post1"
asyncpg = "^0.29.0"
litestar = {extras = ["pydantic", "sqlalchemy", "standart"], version = "^2.4.2"}
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"
pendulum = "^2.1.2"
requests = "^2.31.0"
orjson = "^3.9.10"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.291"
pyright = "^1.1.327"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["trading_service"]

reportMissingImports = true
reportMissingTypeStubs = false

pythonVersion = "3.10"
